--- a/Person-Api/pom.xml
+++ b/Person-Api/pom.xml
@@ -54,7 +54,9 @@
 	</dependencies>
 
 	<build>
+		<defaultGoal>install</defaultGoal>
 		<plugins>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
