--- a/Person-Api/src/main/resources/application.properties
+++ b/Person-Api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 # DATASOURCE
-spring.datasource.url=jdbc:h2:file:./data/exemplo
+spring.datasource.url=jdbc:h2:file:./data/example
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=123
